--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "الحاسبة",
+  "name": "الحاسبة السريعة",
   "short_name": "الحاسبة",
   "description": "حاسبة بسيطة وسريعة تعمل بدون إنترنت.",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#1b1b23",
-  "theme_color": "#3b82f6",
+  "background_color": "#1e1e1e",
+  "theme_color": "#ff9500",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "calc.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
