--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#ff9500",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "/icons/calc192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "/icons/calc512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
