--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Advanced Calculator",
+  "name": "Calculator",
   "short_name": "Calculator",
   "description": "A fast and simple calculator that works offline.",
   "start_url": "/",
