--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,32 @@
 {
   "name": "Sphere Calculator",
-  "short_name": "Calc",
-  "description": "A beautiful, fast, offline calculator that feels like a native app.",
-  "start_url": "/",
+  "short_name": "Calculator",
+  "description": "fast easy",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#1b1b23",
   "theme_color": "#000000",
   "icons": [
+    {
+      "src": "icons/calc48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/calc72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/calc96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/calc128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
     {
       "src": "icons/calc192.png",
       "sizes": "192x192",
@@ -18,5 +38,7 @@
       "type": "image/png"
     }
   ],
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "scope": "./",
+  "prefer_related_applications": false
 }
