--- a/z/manifest.json
+++ b/z/manifest.json
@@ -2,19 +2,19 @@
   "name": "تطبيق الصور الرياضية",
   "short_name": "صور رياضية",
   "description": "معرض صور رياضية تفاعلي",
-  "start_url": "/z/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#f5f7fa",
   "theme_color": "#1a73e8",
   "scope": "/z/",
   "icons": [
     {
-      "src": "/z/icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/z/icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
